# Python-Discord-Cryptocurrency-Bot

./: .env  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
src/discord_price/: bot.py  config.py  quote.py
