[build-system]
requires = ["setuptools"]

[project]
name = "discord-crypto-price-bot"
version = "1.0.0"
description = "A Discord bot for real-time cryptocurrency price and conversion tracking with CoinMarketCap integration."
readme = "README.md"
authors = [
    { name = "Daniel Chrobak", email = "danielchrobak12@gmail.com" },
    { name = "Jeremy Cooper", email = "jeremy.gthb@baymoo.org" },
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "discord==2.3.2",
    "requests>=2.32.3",
    "python-dotenv",
    "colorlog",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/DanielChrobak/Python-Discord-Cryptocurrency-Bot"
Documentation = "https://github.com/DanielChrobak/Python-Discord-Cryptocurrency-Bot/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "."}
